added data volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,5 +34,8 @@ services:
             - ./dags:/opt/airflow/dags
             - ./logs:/opt/airflow/logs
             - ./scripts:/opt/airflow/scripts
+            - ./store_files:/opt/airflow/store_files
+            - ./outputs:/opt/airflow/outputs
+            - ./bash_scripts: /opt/airflow/bash_scripts
         ports:
             - "8080:8080"
